Issue #SB-27515 UI Dark mode enhancements - Players

--- a/themes/themes-portal.scss
+++ b/themes/themes-portal.scss
@@ -1768,6 +1768,28 @@ html[data-theme=Darkmode] {
 
 	--visit-helpcenter-bg: #333333;
 	
+	//SDK
+	--sdk-end-page-title:#fff;
+	--sdk-end-page-replay-icon: #fff;
+	--sdk-end-page-replay-section-bg: #333;
+	--sdk-end-page-replay-section-hover:#222;
+	--sdk-end-page-title-span: #fff;
+	//QUML
+	--quml-main-bg :#333;
+    --quml-color-primary-contrast:#fff;
+    --quml-scoreboard-sub-title:#f2f2f2;
+    --quml-mcq-title-txt:#fff;
+    --quml-option-card-bg: #222222;
+    --quml-btn-border: #222;
+    --quml-option-selected-checkmark:#333;
+    --quml-navigation-btns:#333;
+    --quml-question-bg:#333;
+	--quml-scoreboard-unattempted:#fff;
+	--quml-info-icon:  #000 !important;
+	--quml-close-icon:#fff;
+	
+
+
 	app-signup {
 		.sb-checkbox.sb-checkbox-primary label:before {
 		  border-color: var(--primary-color);
@@ -1802,69 +1824,6 @@ html[data-theme=Darkmode] {
 	}
 
 
-	///QUML player darkmode styles
-	.quml-mcq,
-  .quml-sa, quml-sa {
-	  p {color:#fff;}
-  }
-	.quml-header__container,
-	.landscape-content {
-		background: #333;
-	}
-
-	.duration,
-	.quml-option-card .option {
-		color: #fff !important;
-	}
-
-	.att-color, .skipped{
-		color: #000;
-	}
-
-	.progressBar-border,
-	.showFeedBack-progressBar:hover {
-		border: .1875rem double !important;
-		color: #000 !important;
-		background: #dcbb25 !important;
-	}
-
-	.container input:checked~.checkmark,
-	.quml-option--selected .checkmark {
-		background-color: #000000 !important;
-	}
-
-	.quml-option, .quml-mcq-option-card {
-		background-color: #222222;
-		border: .0625rem solid #222;
-	}
-	.lanscape-mode-right ul .showFeedBack-progressBar .active, .lanscape-mode-right ul .showFeedBack-progressBar.att-color, .lanscape-mode-right ul .showFeedBack-progressBar.progressBar-border{
-		color: var(--black) !important;
-	}
-	.quml-mcq p, .quml-mcq span, .quml-sa p, .quml-sa span, .startpage__instr-desc p, .startpage__instr-desc span, quml-mcq-solutions p, quml-mcq-solutions span, quml-sa p, quml-sa span{
-		color: var(--white);
-	}
-	.player-endpage__right-panel .title-section .title{
-		color: var(--white) !important;
-	}
-	.replay-section div svg g path{
-		fill: var(--white);
-	}
-	.replay-section div svg g path:first-child {
-		fill: transparent;
-	}
-	.scoreboard__index.unattempted{
-		color: #fff;
-    	border: 0.03125rem solid #fff;
-	}
-	.main-container{
-		background: #333;
-	}
-	.quml-navigation__next--active::after, .quml-navigation__next:hover::after, .quml-navigation__previous--active::after, .quml-navigation__previous:hover::after {
-		border-color: #000;
-	}
-	.quml-option--selected {
-		border: .125rem solid var(--primary-color);
-	}
 
 	.sb-label-grid.sb-pills-grid .item {
 		// background-color: var(--black) !important;
@@ -2164,22 +2123,10 @@ html[data-theme=Darkmode] {
 		border-color: #ffd92a #ffd92a transparent transparent !important;
 	}
 
-	.player-endpage,
-	.replay-section {
-		background-color: #333 !important;
-	}
-
 	.player-endpage__right-panel .user-options img {
 		filter: invert(1);
 	}
 
-	.replay-section:hover {
-		background-color: #222 !important;
-	}
-
-	.truncate-overflow {
-		color: #333;
-	}
 
 	.overlay-sidebar {
 		background: rgba(var(--sbt-sidemenu-overlay-bg), 0.8);
@@ -2582,10 +2529,6 @@ html[data-theme=Darkmode] {
 			}
 		}
 
-	}
-
-	sb-player-end-page .player-endpage .title-section span {
-		color: #fff !important;
 	}
 
 	// player header
